--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-import os
-
-lib_1=os.popen("pip install django-froala-editor").read()
-print(lib_1)
-
-lib_3=os.popen("pip install Pillow").read()
-print(lib_3)
-
-lib_7=os.popen("pip install djangorestframework").read()
-print(lib_7)
+djangorestframework
+Pillow
+django-froala-editor
